--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,12 +23,14 @@ main{
     text-align: center;
 }
 .background-img{
-    position: relative;
+    position: sticky;
+    bottom: 0;
     height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: -1;
 }
 .background-img::before{
     content:"";
@@ -39,7 +41,7 @@ main{
     right: 0px;
     bottom: 0px;
     left: 0px;
-    opacity: 0.25;
+    opacity: 0.20;
 }
 .project-title{
     font-size: 1.2em;
@@ -65,19 +67,33 @@ main{
 }
 .project-tile:hover{
     background-color: #e2e5e6;
+    transform: scale(1.2);
 }
 .project-tile h2{
     padding-top: 20px;
 }
+.project-tile a{
+    text-decoration: none;
+    color: black;
+}
+.project-tile a:hover{
+    color: blue;
+}
 .project-tile-image{
     grid-row: span 3;
     place-self: center;
+}
+.project-tile-image:hover{
+   
 }
 .project-tile img{ 
     display: block;
     max-height: 114px;
     border-radius: 20px;
     filter: drop-shadow(2px 2px 5px rgba(0,0,0,0.25));
+}
+.project-tile img:hover{ 
+    transform: scale(1.1);
 }
 .date{
     position: relative;
